--- a/source/assets/stylesheets/molecules/_billboard.scss
+++ b/source/assets/stylesheets/molecules/_billboard.scss
@@ -40,6 +40,7 @@ $billboard-padding: fs(8);
 
 .billboard-title {
     @extend %beta;
+    text-align: center;
     // color: theme(bg);
 }
 
